# coordinate

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
JSLib/: JSLib.js
contracts/: attacker.sol  example.sol
main/: Blockchain.py  Cryptography.py  JSTools.js  Math.py
often/: often.py  test.py
solidity-library/: deployer.sol  get_runtimecode.sol  misc.sol  predict_contract_address.sol  rawTXSender.sol
solidityLib/: CREATE2Deployer.sol  UIntMath.sol  assemblyLib.sol  attackerDeployer.sol  check_interface_without_fail.sol  getContractFrom.sol  get_runtimecode.sol  rawTxSender.sol  solidityLib.sol
src/: config.rs  lib.rs
src/primitives/: hash.rs  mod.rs  sign.rs
src/signature/: mod.rs
tests/: call_contract.rs  sign_eip712_message.rs  sign_message.rs
