[package]
name = "coordinate"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.5.2", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "eips",
] }
dotenv = "0.15.0"
tokio = "1.41.1"
